add rate limit for a production and remove from development

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ API_TITLE=Web Crawler API
 API_VERSION=v1
 PORT=5014
 
+# API Key for bypassing rate limits in production
+# Generate a secure key: python -c "import secrets; print(secrets.token_urlsafe(32))"
+API_KEY=-mPoZgYhQ4xZEOj1aYk2dp_GpPPvaMlt9VB-u3vgaXA
+
 # CORS Configuration
 ALLOWED_ORIGINS=*
 
@@ -18,11 +22,13 @@ MAX_CONTENT_LENGTH=5014
 # Rate Limiting & Caching
 REDIS_URL=redis://localhost:6379/0
 
+# Rate Limiting Configuration
+# These limits only apply in production without a valid API key
+RATELIMIT_STORAGE_URL=memory://
+RATELIMIT_DEFAULT=100 per hour
+
 # Logging
 LOG_LEVEL=INFO
 
-# Use Redis for caching
-
-
-# Increase worker processes
+# Worker Configuration
 WORKERS=4
